--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <style>
 	body{
-		background-image: url("img/bg.jpg");
+		background-image: url("./img/bg.jpg");
 	}
 </style>
 <html>
@@ -14,6 +14,6 @@
 		
 		<a href="./节日短信送祝福.apk">节日短信送祝福apk下载</a>
 		<h5>已经实现全部功能！请用浏览器打开！</h5>
-		<img src="img/view.png"/>
+		<img src="./img/view.png"/>
 	</body>
 </html>
